--- a/LaRuche_2017/laruche/tsconfig.json
+++ b/LaRuche_2017/laruche/tsconfig.json
@@ -1,8 +1,12 @@
 {
+    "compileOnSave": true,
     "compilerOptions": {
+        "module": "commonjs",
+        "target": "es5",
+        "noImplicitAny": false,
+        "sourceMap": false,
         "outDir": "./src",
-        "allowJs": true,
-        "target": "es5"
+        "allowJs": true
     },
     "include": [
         "./src/**/*"
