--- a/LaRuche_2017/laruche/package.json
+++ b/LaRuche_2017/laruche/package.json
@@ -7,14 +7,18 @@
     "example": "examples"
   },
   "devDependencies": {
-    "uglify-js": "^3.0.28",
-    "typescript": "^2.5.2"
+    "@types/foundation": "^5.5.30",
+    "@types/html2canvas": "^0.5.35",
+    "@types/jquery": "^2.0.46",
+    "@types/quill": "^1.3.2",
+    "typescript": "^2.5.2",
+    "uglify-js": "^3.0.28"
   },
   "dependencies": {
-    "@types/foundation": "^5.5.28",
-    "@types/html2canvas": "^0.5.33",
-    "@types/jquery": "^2.0.46",
-    "@types/quill": "0.0.29"
+    "closure-library": "^1.43629075.2",
+    "foundation-sites": "^6.4.3",
+    "katex": "^0.8.3",
+    "quill": "^1.3.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
