--- a/LaRuche_2017/laruche/tsconfig.json.example
+++ b/LaRuche_2017/laruche/tsconfig.json.example
@@ -2,12 +2,11 @@
     "compilerOptions": {
         "outDir": "./src",
         "allowJs": false,
-        "target": "es5"
+        "target": "es5",
+        "lib": [ "es2015", "dom" ]
     },
     "include": [
-        "./src/**/*"
-    ],
-    "exclude": [
+        "./src/**/*",
         "./reference.ts"
     ]
 }
