update .gitignore and build system for new position of directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-Annexe_devis_NathanBuskulic_201706-001.pdf
 distribution.old/
-LaRuche_2017/devis_NathanBuskulic_201706-001.pdf
 
-LaRuche_2017/laruche/logbook-damir1.txt
+LaRuche/logbook-damir1.txt
 
-LaRuche_2017/laruche/tsconfig.json
+LaRuche/tsconfig.json
 
 LaRuche_Tutorial/
 
