--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 distribution.old/
 
-LaRuche/logbook-damir.txt
-LaRuche/logbook-Nathan.txt
+LaRuche/logbook_damir.txt
+LaRuche/logbook_Nathan.txt
 
 LaRuche/tsconfig.json
 
